BAEL-6254: Add module